--- a/bottle-pi.service
+++ b/bottle-pi.service
@@ -1,9 +1,13 @@
+# Create the bottle-pi user:
+# adduser --disabled-login --gecos '' --ingroup bottle-pi,gpio bottle-pi
+
 [Unit]
 Description=bottle-pi
 After=network.target
 
 [Service]
 Type=simple
+User=bottle-pi
 ExecStart=/usr/local/bin/bottle-pi
 Restart=always
 RestartSec=2
